<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">eldoradeio</string>
    <string name="room_filter_type">Filter by:</string>
    <string name="room_filter_choice">Floor:</string>
    <string name="room_list">Rooms:</string>
    <string name="room_item_room_name">Room name</string>
    <string name="room_item_book">Book</string>
    <string name="room_filter_floor">Floor</string>
    <string name="toast_room_list_changed">Room list fetched</string>
    <string name="username">Email</string>
    <string name="content_logo">Eloradeio logo</string>
    <string name="password">Password</string>
    <string name="text_login">Welcome young bream, please sign in !</string>
    <string name="textBLogin">SIGN IN</string>
    <string name="textBRegister">SIGN UP</string>
    <string name="text_register">You want to the bream network ? Fill in this form !</string>
    <string name="last_name_register">Last name</string>
    <string name="first_name_register">First name</string>
    <string name="dob_register">D.O.B</string>
    <string name="year_text_register">"Year: "</string>
    <string name="firstname_update">Firstname</string>
    <string name="lastname_update">Lastname</string>
    <string-array name="years_array">
        <item>N1</item>
        <item>N2</item>
        <item>N3</item>
        <item>M1</item>
        <item>M2</item>
    </string-array>
    <string name="toast_spinner_register">Clicked:</string>
    <string name="date_format">%04d-%02d-%02d</string>
    <string name="booking_room_header">Booking for room %1$s</string>
    <string name="booking_date">Choose the date:</string>
    <string name="booking_availability_status">Availability status: %1$s</string>
    <string name="booking_book">Book this room</string>
    <string name="profile_favorite">Favorite rooms</string>
    <string name="favorite_add_room">Add a room</string>
    <string name="group_you_belong_to">You belong to the following bream groups:</string>
    <string name="group_text">Groups:</string>
    <string name="group_join_group">Join group</string>
    <string name="group_create_group">Create a group</string>
    <string name="profile_group">Groups</string>
    <string name="group_item_group_name">Group name</string>
    <string name="group_item_leave">Leave</string>
    <string name="welcome_home">"Welcome to the bream network, "</string>
    <string name="hey_you_bream">Hey you, sneaky bream, select your year !</string>
    <string name="profile_picture">Your best bream\'s shot !</string>
    <string name="err_perm_select_image">We need your authorization to access your gallery!</string>
    <string name="err_perm_camera">We need your authorization to access your camera!</string>
    <string name="status_available">available</string>
    <string name="status_partially_available">partially available</string>
    <string name="status_unavailable">probably unavailable</string>
    <string name="profile_bSave">Profile Modification</string>
    <string name="profile_fName_value">"First Name: "</string>
    <string name="profile_lName_value">"Last Name: "</string>
    <string name="profile_DOB_value">"D.O.B: "</string>
    <string name="profile_year_value">"Year: "</string>
    <string name="home_disconnection">Disconnection</string>
    <string name="home_room_search">Room search</string>
    <string name="home_profile">Profile</string>
    <string name="schedule_add">Add a schedule</string>
    <string name="dialogue_schedule_start_time">Enter start time</string>
    <string name="dialog_schedule_finish_time">Enter the finish time</string>
    <string name="start_schedule">Start:</string>
    <string name="finish_schedule">Finish:</string>
    <string name="desc_schedule">Description:</string>
    <string name="user_schedule">Bream:</string>
    <string name="null_field">Null field</string>
    <string name="singup_success">Signup success</string>
    <string name="singup_failed">Registration failed.</string>
    <string name="missing_field">Please fill all fields.</string>
    <string name="permission_granted">Permission accepted. Thanks!</string>
    <string name="permission_already_granted">Permissions have already been accepted!</string>
    <string name="write_external_storage_permission_granted">WRITE_EXTERNAL_STORAGE permission granted</string>
    <string name="upload_failed">Failed upload</string>
    <string name="upload_success">Upload successful</string>
    <string name="take_photo_cancel">Cancelled</string>
    <string name="signin_success">Sign in success</string>
    <string name="download_failure">Failed download</string>
    <string name="join_group_failed">There was a problem while joining the group</string>
    <string name="create_group_failed">There was a problem while creating the group</string>
    <string name="book_room_failed">There was an issue while booking the room</string>
    <string name="camera_permission_granted">CAMERA permission granted</string>

</resources>