<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <ImageView
            android:src="@mipmap/logodorade"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center"
            android:background="#FFFFBB33"
            android:contentDescription="@string/app_name" android:id="@+id/dialogScheduleImageView"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/descriptifLayout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname_update" android:id="@+id/descField" android:singleLine="true"
                android:selectAllOnFocus="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/debutLayout">
        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialogue_schedule_start_time" android:id="@+id/startField"
                android:singleLine="true"
                android:selectAllOnFocus="true" android:layout_weight="1" android:inputType="time"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/finLayout">
        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_schedule_finish_time" android:id="@+id/finishField"
                android:singleLine="true"
                android:selectAllOnFocus="true" android:layout_weight="1" android:inputType="time"/>
    </android.support.design.widget.TextInputLayout>


</LinearLayout>
