<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Authentification.LoginActivity">

    <ImageView
            android:src="@mipmap/logodorade"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:contentDescription="@string/content_logo" app:layout_constraintHorizontal_bias="0.51"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textLogin"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailFieldLayout" android:layout_marginEnd="128dp" android:layout_marginRight="128dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" android:id="@+id/emailField"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="128dp" android:layout_marginRight="128dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp"
            app:layout_constraintTop_toBottomOf="@+id/emailFieldLayout" android:id="@+id/pwdFieldLayout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" android:id="@+id/pwdField"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
            android:text="@string/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textLogin" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"/>
    <Button
            android:text="@string/textBLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bLogin" android:layout_marginTop="104dp"
            app:layout_constraintTop_toBottomOf="@+id/pwdFieldLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>