<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Authentification.RegisterActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textRegister"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:text="@string/text_register"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@mipmap/logodorade"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textRegister" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:contentDescription="@string/content_logo"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailFieldLayoutRegister"
            app:layout_constraintStart_toStartOf="@+id/lastNameFieldLayoutRegister"
            app:layout_constraintEnd_toEndOf="@+id/lastNameFieldLayoutRegister" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_register" android:singleLine="true" android:selectAllOnFocus="true"
                android:id="@+id/emailFieldRegister"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lastNameFieldLayoutRegister"
            app:layout_constraintStart_toStartOf="@+id/firstNameFieldLayoutRegister"
            app:layout_constraintEnd_toEndOf="@+id/firstNameFieldLayoutRegister"
            app:layout_constraintTop_toBottomOf="@+id/emailFieldLayoutRegister">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_register" android:id="@+id/lastNameFieldRegister"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/firstNameFieldLayoutRegister"
            app:layout_constraintStart_toStartOf="@+id/dobFieldLayoutRegister"
            app:layout_constraintEnd_toEndOf="@+id/dobFieldLayoutRegister"
            app:layout_constraintTop_toBottomOf="@+id/lastNameFieldLayoutRegister">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_register" android:id="@+id/firstNameFieldRegister"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:id="@+id/dobFieldLayoutRegister"
            app:layout_constraintTop_toBottomOf="@+id/firstNameFieldLayoutRegister"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="128dp"
            android:layout_marginStart="128dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp" android:layout_marginRight="128dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob_register" android:id="@+id/dobFieldRegister"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/textBRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:background="@color/colorAccent"
            android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/dobFieldLayoutRegister"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:textColor="@color/common_google_signin_btn_text_dark_default"/>
</android.support.constraint.ConstraintLayout>