<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profile.GroupActivity">

    <TextView
            android:text="@string/group_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/groupHeaderText"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/groupRecyclerView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/groupText" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/groupAddGroupButton"/>
    <Button
            android:text="@string/group_add_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupAddGroupButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/groupCreateGroupButton"/>
    <Button
            android:text="@string/group_create_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupCreateGroupButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/group_you_belong_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupHeaderText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>