<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentification.HomeActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeWelcome" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"/>
    <Button
            android:text="@string/home_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeProfile"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/circularProfile"
            style="@style/ClassicButtonDorade"
            android:background="@color/common_google_signin_btn_text_dark_default"/>
    <Button
            android:text="@string/home_room_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeSearch" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/homeProfile" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" style="@style/ClassicButtonDorade"
            android:background="@color/common_google_signin_btn_text_dark_default" android:padding="8dp"/>
    <Button
            android:text="@string/home_disconnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeDisconnection" android:layout_marginTop="128dp"
            app:layout_constraintTop_toBottomOf="@+id/homeSearch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" style="@style/ClassicButtonDorade"
            android:background="@color/common_google_signin_btn_text_dark_default" android:padding="8dp"/>
    <View
            android:id="@+id/dividerProfile"
            android:layout_width="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="232dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_height="633dp"/>
    <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/doraderose"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="4dp"
            app:civ_shadow_radius="5"
            app:civ_shadow_color="@color/common_google_signin_btn_text_light_focused"
            android:id="@+id/circularProfile"
            android:scaleType="centerInside"
            app:civ_shadow="true" app:civ_border="true"
            android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/dividerProfile"
            app:layout_constraintEnd_toEndOf="@+id/dividerProfile"/>

</android.support.constraint.ConstraintLayout>